# spendsmart-dashboard

./: .env.example  .env.local  .gitignore  2026-02-11-command-messagesuperpowersbrainstormcommand-m.txt  CLAUDE.md  Codebase Audit Report  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  init-superpowers.sh  inspect_excel.py  next.config.ts  package-lock.json  package.json  proxy.ts  pyproject.toml  requirements.txt  superpowers-integration-context.md  tailwind.config.ts  vercel.json
.agents/workflows/: brainstorm.md  ci-cd.md  context-checkpoint.md  dispatch-parallel-agents.md  execute-plan.md  finish-branch.md  git-worktrees.md  global-rule.md  k8s-troubleshooter.md  monitoring-expert.md  receive-code-review.md  request-code-review.md  subagent-driven-dev.md  systematic-debugging.md  (+5 more)
.claude/: settings.local.json
.gemini/: current_state.md  skills-guide.md
app/: error.tsx  globals.css  layout.tsx  page.tsx  template.tsx
architecture/: ingestion.md  navigation.md  schema.sql  training_schema.sql  verify_schema.py
lib/: crypto.ts  privacy.ts  supabase.ts
models/: anchors.pt  hypcd_model.pt
reference_html/: slush_app.html  slush_login.html
reference_txt/: Researching AI, Math, and Frameworks.txt  SCALE App Architecture Research Plan.txt
references/: devops_roadmap.md
scripts/: dev.sh  fetch_roadmap.py  inspect_excel.py  start-local.sh  start.sh  stop-local.sh  stop.sh  verify_import.py
tools/: Transactions.csv  dummy_data.csv  generate_synthetic.py  handshake_supabase.py  import_transactions.py  requirements.txt  synthetic_transactions.csv
(+230 files in other folders)
