[project]
name = "scale-app"
version = "0.1.0"
description = "SCALE — AI-Powered Financial Intelligence"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]
testpaths = [
    "apps/api/tests",
    "apps/worker/tests",
    "packages/categorization/tests",
    "packages/forecasting/tests",
    "packages/ingestion_engine/tests",
]
